# cash-flow

./: .gitignore  README.md  main.py  pyproject.toml
data/: config.sample.json
model/: config.py  movement.py
